--- a/css/main.css
+++ b/css/main.css
@@ -30,12 +30,12 @@
   --success: #0ACE2D;
   
   /* dark */
-  --primary: #FFC649;
-  --secondary: #8ACD6D;
+  --dprimary: #FFC649;
+  --dsecondary: #8ACD6D;
   --dark: #2F2E2B;
-  --alert: #E15F5F;
-  --info: #FFBA7B;
-  --success: #65E17B;
+  --dalert: #E15F5F;
+  --dinfo: #FFBA7B;
+  --dsuccess: #65E17B;
 }
 
 body {
@@ -43,10 +43,11 @@ body {
 }
 
 header {
-  background: var(--primary);
+  background: var(--light);
   width: 100%;
   height: 55px;
   padding: 0 5%;
+  border-bottom: 1px solid var(--dark);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -77,9 +78,7 @@ header .bottombar-toggle {
 }
 
 header .bottombar-toggle span {
-  background: var(--dark);
-  width: 100%;
-  height: 2px;
+  font-size: 35px;
 }
 
 nav.xs-sm-md {
@@ -115,8 +114,10 @@ html:has(nav.xs-sm-md.active) main::after {
   left: 0;
 }
 
-#signInBtn, #startReadingBtn {
+#signInBtn, #ctaBtn {
   background: var(--light);
+  color: var(--dark);
+  width: 100%;
   padding: 10px 1em;
   display: flex;
   align-items: center;
@@ -137,4 +138,52 @@ html:has(nav.xs-sm-md.active) main::after {
   align-items: center;
   justify-content: left;
   gap: 10px;
+}
+
+main {
+  width: 100%;
+  padding: 60px 5%;
+}
+
+.hero {
+  background: url("../img/wavy_lines_pattern_background.jpg") no-repeat center / cover;
+  color: var(--light);
+  width: 100%;
+  margin: auto;
+  max-width: 800px;
+  height: auto;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero .overlay {
+  background: #00000090;
+  width: 100%;
+  height: 100%;
+  padding-top: 60px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  gap: 15px;
+}
+
+.hero .title {
+  margin: 0 5%;
+  font-size: 45px;
+  font-weight: 800;
+  letter-spacing: -2px;
+  line-height: 1;
+}
+
+.hero .body-content {
+  margin: 0 5%;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 1.4;
+  
 }
