--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ header .site-id img {
   height: auto;
 }
 
-header .bottombar-toggle {
+header .nav-toggle {
   width: 1.8em;
   height: 2em;
   display: flex;
@@ -78,13 +78,12 @@ header .bottombar-toggle {
   position: relative;
 }
 
-header .bottombar-toggle span {
+header .nav-toggle span {
   font-size: 35px;
 }
 
-nav.xs-sm-md {
+nav.auto {
   background: var(--light);
-  box-shadow: 0 0 6px 3px rgba(0,0,0,0.06);
   width: 100%;
   height: 50vh;
   padding: 6%;
@@ -101,14 +100,14 @@ nav.xs-sm-md {
   z-index: 9;
 }
 
-nav.xs-sm-md.active {
+nav.auto.active {
   bottom: 0;
   transition: .3s ease;
 }
 
-html:has(nav.xs-sm-md.active) main::after {
+html:has(nav.auto.active) main::after {
   content: "";
-  background: #00000090;
+  background: #00000099;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -152,7 +151,7 @@ html:has(nav.xs-sm-md.active) main::after {
 .authForm-wrapper form input {
   font-size: 16px;
   width: 100%;
-  padding: 15px 5%;
+  padding: 12px 5%;
   border: 1.8px solid var(--dark);
   border-radius: 10px;
 }
@@ -164,15 +163,44 @@ html:has(nav.xs-sm-md.active) main::after {
   cursor: pointer;
 }
 
-html:has(.authForm-wrapper.active) .bottombar-link {
+html:has(.authForm-wrapper.active) .nav-link {
   display: none;
 }
 
-.bottombar-link {
+.nav-link {
   display: flex;
   align-items: center;
   justify-content: left;
   gap: 10px;
+}
+
+.nl-collapsible {
+  width: 100%;
+  display: none;
+}
+
+.theme-switch, .userName-edit {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 10px;
+}
+
+.nl-collapsible .current-userName {
+  font-size: 16px;
+  width: 100%;
+  padding: 7px 3%;
+  border: 1px solid var(--dark);
+  border-radius: 5px;
+  opacity: .8;
+}
+
+.nl-collapsible.active {
+  display: block;
+  padding: 1em 10px;
+  margin-left: 10px;
+  border-left: 1px solid var(--dark);
 }
 
 main {
@@ -187,7 +215,7 @@ main {
   margin: auto;
   max-width: 800px;
   height: auto;
-  border-radius: 30px;
+  border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -198,7 +226,7 @@ main {
   width: 100%;
   height: 100%;
   padding-top: 60px;
-  border-radius: 30px;
+  border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -223,7 +251,7 @@ main {
 }
 
 #ctaBtn {
-  background: var(--light);
+  background: var(--primary);
   color: var(--dark);
   width: 100%;
   padding: 10px 1em;
