--- a/css/main.css
+++ b/css/main.css
@@ -344,3 +344,28 @@ main {
 .auth-content {
   display: none;
 }
+
+.auth-content.active {
+  width: 100%;
+}
+
+.auth-content.active .content-nav {
+  width: 100%;
+  padding: 10px;
+  border-radius: 50px;
+  border: 1pc solid var(--dark);
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 10px;
+}
+
+.auth-content.active .cn-link {
+  border-radius: 50px;
+  padding: 7px 14px;
+}
+
+.auth-content.active .cn-link.active {
+  background: var(--dark);
+  color: var(--light);
+}
