--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,7 @@ main {
   width: 100%;
   padding: 10px;
   border-radius: 50px;
-  border: 1pc solid var(--dark);
+  border: 1px solid var(--dark);
   display: flex;
   align-items: center;
   justify-content: left;
