--- a/css/main.css
+++ b/css/main.css
@@ -347,25 +347,25 @@ main {
 
 .auth-content.active {
   width: 100%;
+  display: flex;
 }
 
-.auth-content.active .content-nav {
+.auth-content .content-nav {
   width: 100%;
   padding: 10px;
   border-radius: 50px;
   border: 1px solid var(--dark);
-  display: flex;
   align-items: center;
   justify-content: left;
   gap: 10px;
 }
 
-.auth-content.active .cn-link {
+.auth-content .cn-link {
   border-radius: 50px;
   padding: 7px 14px;
 }
 
-.auth-content.active .cn-link.active {
+.auth-content .cn-link.active {
   background: var(--dark);
   color: var(--light);
 }
