--- a/css/main.css
+++ b/css/main.css
@@ -355,6 +355,7 @@ main {
   padding: 10px;
   border-radius: 50px;
   border: 1px solid var(--dark);
+  display: flex;
   align-items: center;
   justify-content: left;
   gap: 10px;
