--- a/css/main.css
+++ b/css/main.css
@@ -206,6 +206,7 @@ html:has(.resetPasswordForm-wrapper.active) .nav-link {
 .nl-collapsible .current-userName {
   font-size: 16px;
   width: 100%;
+  max-width: 200px;
   padding: 7px 3%;
   border: 1px solid var(--dark);
   border-radius: 5px;
