--- a/css/main.css
+++ b/css/main.css
@@ -206,11 +206,13 @@ html:has(.resetPasswordForm-wrapper.active) .nav-link {
 .nl-collapsible .current-userName {
   font-size: 16px;
   width: 100%;
-  max-width: 200px;
+  max-width: 260px;
   padding: 7px 3%;
   border: 1px solid var(--dark);
   border-radius: 5px;
   opacity: .8;
+  white-space: nowrap;
+  overflow: auto;
 }
 
 .nl-collapsible.active {
