--- a/css/main.css
+++ b/css/main.css
@@ -205,8 +205,8 @@ html:has(.resetPasswordForm-wrapper.active) .nav-link {
 
 .nl-collapsible .current-userName {
   font-size: 16px;
-  width: 100%;
-  max-width: 260px;
+  width: auto;
+  max-width: 100%;
   padding: 7px 3%;
   border: 1px solid var(--dark);
   border-radius: 5px;
