--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,7 @@ header .nav-toggle span {
 nav.auto {
   background: var(--light);
   width: 100%;
+  max-width: 100%;
   height: 50vh;
   padding: 6%;
   border-radius: 30px 30px 0 0;
@@ -184,6 +185,7 @@ html:has(.resetPasswordForm-wrapper.active) .nav-link {
 }
 
 .nav-link {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: left;
@@ -205,7 +207,7 @@ html:has(.resetPasswordForm-wrapper.active) .nav-link {
 
 .nl-collapsible .current-userName {
   font-size: 16px;
-  width: auto;
+  
   padding: 7px 3%;
   border: 1px solid var(--dark);
   border-radius: 5px;
