--- a/css/main.css
+++ b/css/main.css
@@ -207,7 +207,7 @@ html:has(.resetPasswordForm-wrapper.active) .nav-link {
 
 .nl-collapsible .current-userName {
   font-size: 16px;
-  
+  text-overflow: ellipsis;
   padding: 7px 3%;
   border: 1px solid var(--dark);
   border-radius: 5px;
