--- a/css/main.css
+++ b/css/main.css
@@ -89,9 +89,9 @@ nav.auto {
   height: 50vh;
   padding: 6%;
   border-radius: 30px 30px 0 0;
-  display: grid;
-  grid-auto-flow: row;
-  align-content: start;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
   gap: 1.5em;
   position: fixed;
   left: 0;
@@ -207,6 +207,7 @@ html:has(.resetPasswordForm-wrapper.active) .nav-link {
 
 .nl-collapsible .current-userName {
   font-size: 16px;
+  white-space: nowrap;
   text-overflow: ellipsis;
   padding: 7px 3%;
   border: 1px solid var(--dark);
