--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,7 @@ nav.auto {
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  flex-direction: column;
   gap: 1.5em;
   position: fixed;
   left: 0;
