--- a/css/main.css
+++ b/css/main.css
@@ -90,8 +90,8 @@ nav.auto {
   padding: 6%;
   border-radius: 30px 30px 0 0;
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
   flex-direction: column;
   gap: 1.5em;
   position: fixed;
