--- a/css/main.css
+++ b/css/main.css
@@ -191,6 +191,7 @@ html:has(.resetPasswordForm-wrapper.active) .nav-link {
   align-items: center;
   justify-content: left;
   gap: 10px;
+  cursor: pointer;
 }
 
 .nl-collapsible {
