--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,7 @@ html:has(.resetPasswordForm-wrapper.active) .nav-link {
   justify-content: left;
   gap: 10px;
   cursor: pointer;
+  -webkit-tap-highlight-color: #27272720;
 }
 
 .nl-collapsible {
