--- a/css/main.css
+++ b/css/main.css
@@ -279,6 +279,17 @@ main {
   }
 }
 
+#loader .refresh.rotate2 {
+  font-size: 40px;
+  animation: rotate2 .5s linear infinite;
+}
+
+@keyframes rotate2 {
+  to {
+    transform: rotate2(360deg);
+  }
+}
+
 #loader .refresh.popup {
   animation: .3s popup linear forwards;
 }
