--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  text-decoration: none;
   border: 0;
   outline: 0;
   appearance: none;
@@ -28,6 +27,8 @@
   --alert: #CE0B0B;
   --info: #CE670A;
   --success: #0ACE2D;
+  --lshade: #dddddd;
+  --dshade: #4D4D4D;
   
   /* dark */
   --dprimary: #FFC649;
@@ -117,17 +118,24 @@ html:has(nav.auto.active) main::after {
   left: 0;
 }
 
-.authForm-wrapper, .resetPasswordForm-wrapper {
+.authForm-wrapper, 
+.resetPasswordForm-wrapper {
   width: 100%;
   display: none;
 }
 
-.authForm-wrapper.active, .resetPasswordForm-wrapper.active {
+.authForm-wrapper.active, 
+.resetPasswordForm-wrapper.active {
   display: block;
 }
 
+.createPostForm-wrapper {
+  width: 100%;
+}
+
 .authForm-wrapper form,
-.resetPasswordForm-wrapper form {
+.resetPasswordForm-wrapper form,
+.createPostForm-wrapper form{
   width: 100%;
   display: grid;
   grid-auto-flow: row;
@@ -145,8 +153,25 @@ html:has(nav.auto.active) main::after {
   font-weight: bold;
 }
 
+.createPostForm-wrapper form label {
+  width: 100%;
+  display: grid;
+  grid-auto-flow: column;
+  gap: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.createPostForm-wrapper form label div {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 10px;
+}
+
 .authForm-wrapper form .data-info,
-.resetPasswordForm-wrapper form .data-info {
+.resetPasswordForm-wrapper form .data-info,
+.createPostForm-wrapper form .data-info {
   width: 100%;
   display: flex;
   align-items: flex-start;
@@ -155,12 +180,14 @@ html:has(nav.auto.active) main::after {
 }
 
 .authForm-wrapper form .data-info span,
-.resetPasswordForm-wrapper form .data-info span {
+.resetPasswordForm-wrapper form .data-info span,
+.createPostForm-wrapper form .data-info span {
   font-size: 14px;
 }
 
 .authForm-wrapper form input,
-.resetPasswordForm-wrapper form input {
+.resetPasswordForm-wrapper form input,
+.createPostForm-wrapper form input {
   font-size: 16px;
   width: 100%;
   padding: 12px 5%;
@@ -173,6 +200,14 @@ html:has(nav.auto.active) main::after {
   background: var(--primary);
   font-size: 16px;
   font-weight: bold;
+  cursor: pointer;
+}
+
+.createPostForm-wrapper form input[type="submit"] {
+  background: var(--primary);
+  font-size: 16px;
+  font-weight: bold;
+  padding: 9px 5%;
   cursor: pointer;
 }
 
@@ -414,4 +449,36 @@ main {
 
 .post:not(:last-child) {
   border-bottom: 1px solid var(--dark);
+}
+
+/* Posts html */
+
+.createPostForm-wrapper .toolbar {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+  padding: 10px 15px;
+  background: #f1f1f1;
+  border-radius: 10px 10px 0 0;
+  border: 1px solid #ddd;
+  overflow: auto;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+}
+
+.createPostForm-wrapper .toolbar button {
+  padding: 0;
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+.createPostForm-wrapper form .body-editor {
+  width: 100%;
+  min-height: 300px;
+  padding: 12px 0;
+  border-top: 1.8px solid var(--lshade);
+  white-space: pre-wrap; /* Maintains line breaks */
 }
