--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,6 @@ header .nav-toggle span {
 nav.auto {
   background: var(--light);
   width: 100%;
-  max-width: 100%;
   height: 50vh;
   padding: 6%;
   border-radius: 30px 30px 0 0;
@@ -94,7 +93,7 @@ nav.auto {
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-  gap: 1.5em;
+  gap: 10px;
   position: fixed;
   left: 0;
   bottom: -100%;
