--- a/css/main.css
+++ b/css/main.css
@@ -446,6 +446,39 @@ main {
   gap: 5px;
 }
 
+.post .pa {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+}
+
+.post .pa span {
+  font-size: 16px;
+}
+
+.post-body {
+  width: 100%;
+  height: 150px;
+  overflow-y: auto;
+}
+
+.post-img {
+  border-radius: 15px;
+  border: 1.8px solid var(--lshade);
+}
+
+.post-analytics {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 10px;
+}
+
+.post-actions {
+  
+}
+
 .post:not(:last-child) {
   border-bottom: 1px solid var(--dark);
 }
