--- a/css/main.css
+++ b/css/main.css
@@ -446,16 +446,6 @@ main {
   gap: 5px;
 }
 
-.post .pa {
-  display: flex;
-  align-items: center;
-  justify-content: left;
-}
-
-.post .pa span {
-  font-size: 16px;
-}
-
 .post-body {
   width: 100%;
   height: 150px;
@@ -474,6 +464,22 @@ main {
   justify-content: left;
   gap: 10px;
 }
+
+.post .post-analytics .pa {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  padding-top: 10px;
+}
+
+.post .post-analytics .pa span {
+  font-size: 16px;
+}
+
+.post .post-analytics .pa span.ms-rounded {
+  font-size: 20px;
+}
+
 
 .post-actions {
   
