--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,9 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
 
 header .site-id {
@@ -417,12 +420,28 @@ main {
   display: flex;
   align-items: center;
   justify-content: left;
-  gap: 10px;
+  gap: 5px;
 }
 
 .auth-content .cn-link {
   border-radius: 50px;
   padding: 7px 14px;
+}
+
+.auth-content .cnl-adaptive {
+  background: var(--dark);
+  color: var(--light);
+  width: 33px;
+  height: 33px;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.auth-content .cnl-adaptive span {
+  font-size: 16px;
 }
 
 .auth-content .cn-link.active {
@@ -479,14 +498,39 @@ main {
 }
 
 .author .time-posted {
+  font-size: 15px;
   font-weight: 300;
   opacity: .5;
 }
 
 .post-body {
   width: 100%;
-  height: auto;
+  height: 200px;
   font-size: 14px;
+  overflow-y: hidden;
+  position: relative;
+  user-select: none!important;
+}
+
+.post-body::after {
+  content: "";
+  background: 
+    linear-gradient(to bottom, 
+    transparent, var(--light));
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.post-body.expand {
+  height: auto;
+  user-select: auto!important;
+}
+
+.post-body.expand::after {
+  background: transparent;
 }
 
 .post-img {
