--- a/css/main.css
+++ b/css/main.css
@@ -505,7 +505,7 @@ main {
 
 .post-body {
   width: 100%;
-  height: 200px;
+  min-height: 50px;
   font-size: 14px;
   overflow-y: hidden;
   position: relative;
@@ -518,7 +518,7 @@ main {
     linear-gradient(to bottom, 
     transparent, var(--light));
   width: 100%;
-  height: 100px;
+  height: 50%;
   position: absolute;
   bottom: 0;
   left: 0;
