--- a/css/main.css
+++ b/css/main.css
@@ -572,7 +572,7 @@ main {
 }
 
 .post:not(:last-child) {
-  border-bottom: 1px solid var(--dark);
+  border-bottom: 1px solid var(--lshade);
 }
 
 /* Posts html */
