--- a/css/main.css
+++ b/css/main.css
@@ -429,7 +429,7 @@ main {
 }
 
 .auth-content .cnl-adaptive {
-  background: var(--dark);
+  background: var(--primary);
   color: var(--light);
   width: 33px;
   height: 33px;
@@ -445,7 +445,7 @@ main {
 }
 
 .auth-content .cn-link.active {
-  background: var(--dark);
+  background: var(--primary);
   color: var(--light);
 }
 
