--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ body {
   --alert: #CE0B0B;
   --info: #CE670A;
   --success: #0ACE2D;
-  --lshade: #dddddd;
+  --lshade: #EFEFEF;
   --dshade: #4D4D4D;
 
   /* dark */
@@ -96,7 +96,8 @@ header .site-id #userName {
   padding: 5px 30px 5px 15px;
   display: none;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
+  gap: 3px;
   font-size: var(--sm);
   border-radius: 20px;
   position: relative;
@@ -128,6 +129,7 @@ header .nav-toggle {
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
   position: relative;
+  z-index: 9;
 }
 
 header .nav-toggle span {
@@ -310,7 +312,7 @@ html:has(.resetPasswordForm-wrapper.active) .nav-link {
 .nl-collapsible.active {
   display: block;
   padding: 1em 10px;
-  margin-left: 10px;
+  margin-left: 22px;
   border-left: 1px solid var(--dark);
 }
 
@@ -583,6 +585,10 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
 }
 
 .author .author-name {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 3px;
   font-size: var(--sm);
   font-weight: 600;
 }
@@ -595,7 +601,8 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
 
 .post-body {
   width: 100%;
-  min-height: 50px;
+  min-height: 40px;
+  max-height: 300px;
   font-size: var(--sm);
   overflow-y: hidden;
   position: relative;
@@ -615,7 +622,8 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
 }
 
 .post-body.expand {
-  height: auto;
+  min-height: auto;
+  max-height: fit-content;
   user-select: auto !important;
 }
 
@@ -723,7 +731,69 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
   display: none;
 }
 
-/* Post html */
+.post-comments {
+  background: var(--light);
+  width: 100%;
+  height: 100%;
+  padding: 15px 5%;
+  max-width: 700px;
+  position: fixed;
+  bottom: -100%;
+  left: 0;
+  z-index: -1;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.post-comments.active {
+  bottom: 0;
+  left: 0;
+  z-index: 8;
+  opacity: 1;
+  visibility: visible;
+}
+
+.commentForm-wrapper {
+  width: 100%;
+}
+
+#commentForm {
+  width: 100%;
+  padding: 0;
+  border: 1px solid var(--lshade);
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+#commentForm .comment-body {
+  width: 100%;
+  padding: 10px 16px;
+  font-size: var(--sm);
+}
+
+#commentForm .submit-comment {
+  background: var(--primary);
+  color: var(--light);
+  width: 40px;
+  height: 40px;
+  margin: 5px;
+  border-radius: 100%;
+  border: 1px solid var(--lshade);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+#commentForm .submit-comment span {
+  font-size: var(--xl2);
+  font-weight: 400;
+  line-height: 40px;
+}
+
+/* Posting html */
 
 .createPostForm-wrapper {
   background: var(--light);
@@ -893,7 +963,7 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
   }
   
   .post {
-    padding: 15px 0;
+    padding: 15px 20px 15px 0;
     gap: var(--sm2);
   }
   
